[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "creator-breakout-finder"
version = "0.1.0"
description = "Paste a creator profile URL and find posts that beat the creator's own baseline."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Guasi" }]
keywords = ["creator", "analytics", "social-media", "outlier-detection", "tikhub"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.28,<1",
  "python-dotenv>=1.0,<2",
  "streamlit>=1.44,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.11,<1",
]

[project.urls]
Homepage = "https://github.com/guasi18587278913/creator-breakout-finder"
Issues = "https://github.com/guasi18587278913/creator-breakout-finder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
creator_breakout = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
